--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,24 @@
-.App {
+.App
+{
   text-align: center;
 }
 
-.App-logo {
+.App-logo
+{
   height: 40vmin;
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
+@media (prefers-reduced-motion: no-preference)
+{
+  .App-logo
+  {
     animation: App-logo-spin infinite 20s linear;
   }
 }
 
-.App-header {
+.App-header
+{
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -24,15 +29,40 @@
   color: white;
 }
 
-.App-link {
+.App-link
+{
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
+@keyframes App-logo-spin
+{
+  from
+  {
     transform: rotate(0deg);
   }
-  to {
+
+  to
+  {
     transform: rotate(360deg);
   }
 }
+
+/* .Counter
+{}
+
+.Counter__buttons
+{
+  display: grid;
+  grid-template-rows: 100%;
+  grid-template-columns: 1fr 1fr;
+  gap: 1rem;
+  justify-content: center;
+}
+
+.Counter__buttons button
+{
+  margin-inline: auto;
+  display: inline-block;
+  width: 60px;
+  font-size: 1.5rem;
+} */
